# samp-plugin-profiler

./: .gitignore  .gittrees  .travis.yml  CMakeLists.txt  Makefile  Makefile.am  README.md  README.txt  amxalign.c  amxprofiler.cpp  amxprofiler.h  appveyor.yml  configure.ac  logprintf.h  pawn.json  profiler.cpp  profiler.inc  profiler.sln  profiler.vcproj  profiler.vcxproj  version.h  version.sh
amx/: amx.h  amxdbg.c  amxdbg.h  osdefs.h
amx_profiler/: CMakeLists.txt  amx_types.h  amx_utils.cpp  amx_utils.h  c_interface.cpp  call_graph.cpp  call_graph.h  call_graph_writer.cpp  call_graph_writer.h  call_graph_writer_dot.cpp  call_graph_writer_dot.h  call_graph_writer_gv.cpp  call_graph_writer_gv.h  call_stack.cpp  call_stack.h  chrono.h  clock-posix.cpp  clock-win32.cpp  clock.h  clock_posix.cpp  clock_win32.cpp  debug_info.cpp  debug_info.h  duration.h  exception.h  function.cpp  function.h  function_call.cpp  function_call.h  function_info.cpp  function_info.h  function_statistics.cpp  function_statistics.h  line_statistics.cpp  line_statistics.h  macros.h  native_function.cpp  native_function.h  normal_function.cpp  normal_function.h  (+33 more)
amxprof/: amx_types.h  amx_utils.cpp  amx_utils.h  call_stack.h  clock.h  clock_posix.cpp  clock_win32.cpp  debug_info.h  duration.h  function_call.cpp  function_call.h  function_statistics.cpp  statistics_writer_html.cpp  statistics_writer_json.cpp  statistics_writer_text.cpp  statistics_writer_text.h  stdint.h  system_error_posix.cpp  system_error_win32.cpp  time_utils.h
cmake/Modules/: FindStlsoft.cmake  RequireC++11.cmake
include/: CMakeLists.txt  profiler.inc  samp_profiler.inc
plugin/: .gitignore  CMakeLists.txt  amx_path.cpp  amx_path.h  amxpath.cpp  amxpath.h  config_reader.cpp  config_reader.h  configreader.cpp  configreader.h  hook.cpp  hook.h  hook_unix.cpp  hook_win32.cpp  jump-x86.cpp  jump-x86.h  plugin.cpp  plugin.def  plugin.rc.in  version.h.in
src/: CMakeLists.txt  Makefile.am  abstract_printer.h  amx_name.cpp  amx_name.h  amx_path.cpp  amx_path.h  amxhandler.h  amxname.cpp  amxname.h  amxnamefinder.cpp  amxnamefinder.h  amxpath.cpp  amxpath.h  amxpathfinder.cpp  amxpathfinder.h  amxplugin.asm  amxplugin.h  amxprofiler.cpp  amxprofiler.h  call_stack.cpp  call_stack.h  cloneable.h  config_reader.cpp  config_reader.h  configreader.cpp  configreader.h  debug_info.cpp  debug_info.h  debuginfo.cpp  debuginfo.h  dumpsym.cpp  fileutils.cpp  fileutils.h  fileutils_posix.cpp  fileutils_win32.cpp  function.cpp  function.h  function_call.cpp  function_call.h  (+51 more)
src/amx/: CMakeLists.txt  amx.h  amxaux.c  amxaux.h  amxdbg.c  amxdbg.h
src/amx_profiler/: CMakeLists.txt  c_interface.cpp  c_interface.h  call_graph.cpp  call_graph.h  call_graph_writer.h  call_graph_writer_gv.cpp  call_graph_writer_gv.h  call_stack.cpp  call_stack.h  chrono.h  cloneable.h  debug_info.cpp  debug_info.h  function.cpp  function.h  function_call.cpp  function_call.h  function_info.cpp  function_info.h  function_profile.cpp  function_profile.h  html_printer.cpp  html_printer.h  html_profile_writer.cpp  html_profile_writer.h  native_function.cpp  native_function.h  normal_function.cpp  normal_function.h  performance_counter.cpp  performance_counter.h  printer.h  profile_writer.h  profile_writer_html.cpp  profile_writer_html.h  profile_writer_text.cpp  profile_writer_text.h  profile_writer_xml.cpp  profile_writer_xml.h  (+16 more)
src/amxprof/: CMakeLists.txt  amx_types.h  amx_utils.cpp  amx_utils.h  call_graph.cpp  call_graph.h  call_graph_writer.cpp  call_graph_writer.h  call_graph_writer_dot.cpp  call_graph_writer_dot.h  call_stack.cpp  call_stack.h  clock.h  clock_posix.cpp  clock_win32.cpp  debug_info.cpp  debug_info.h  duration.h  exception.h  function.cpp  function.h  function_call.cpp  function_call.h  function_statistics.cpp  function_statistics.h  macros.h  performance_counter.cpp  performance_counter.h  profiler.cpp  profiler.h  statistics.cpp  statistics.h  statistics_writer.cpp  statistics_writer.h  statistics_writer_html.cpp  statistics_writer_html.h  statistics_writer_json.cpp  statistics_writer_json.h  statistics_writer_text.cpp  statistics_writer_text.h  (+6 more)
src/samp_profiler/: amx_name.cpp  amx_name.h  call_stack.cpp  call_stack.h  cloneable.h  config_reader.cpp  config_reader.h  debug_info.cpp  debug_info.h  function.cpp  function.h  function_call.cpp  function_call.h  function_profile.h  html_printer.cpp  html_printer.h  jump_x86.cpp  jump_x86.h  native_function.cpp  native_function.h  normal_function.cpp  normal_function.h  printer.h  profiler.cpp  profiler.h  public_function.cpp  public_function.h  text_printer.cpp  text_printer.h  timer.cpp  timer.h  xml_printer.cpp  xml_printer.h
